# annals

./: .gitignore  Cargo.toml  README.md  output.json
.vizier/narrative/: snapshot.md
docs/: events.schema.json
src/: lib.rs  main.rs  summarize.rs
tests/: library_flow.rs
